tests/merge_env/merge_env.exp
Error ----------------------------------------------------------------------------------------------------- test.js:12:6

Cannot cast `bar` to array type because possibly uninitialized variable [1] is incompatible with array type [2].
[incompatible-cast]

   test.js:12:6
   12|     (bar: Array<boolean>); // error
            ^^^

References:
   test.js:10:9
   10|     let bar: Array<boolean>;
               ^^^ [1]
   test.js:12:11
   12|     (bar: Array<boolean>); // error
                 ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:6

Cannot cast `bar` to array type because possibly uninitialized variable [1] is incompatible with array type [2].
[incompatible-cast]

   test.js:33:6
   33|     (bar: Array<boolean>); // error
            ^^^

References:
   test.js:28:9
   28|     let bar: Array<boolean>;
               ^^^ [1]
   test.js:33:11
   33|     (bar: Array<boolean>); // error
                 ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:54:6

Cannot cast `bar` to array type because possibly uninitialized variable [1] is incompatible with array type [2].
[incompatible-cast]

   test.js:54:6
   54|     (bar: Array<boolean>); // error
            ^^^

References:
   test.js:49:9
   49|     let bar: Array<boolean>;
               ^^^ [1]
   test.js:54:11
   54|     (bar: Array<boolean>); // error
                 ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:74:6

Cannot cast `bar` to array type because possibly uninitialized variable [1] is incompatible with array type [2].
[incompatible-cast]

   test.js:74:6
   74|     (bar: Array<boolean>); // error
            ^^^

References:
   test.js:70:9
   70|     let bar: Array<boolean>;
               ^^^ [1]
   test.js:74:11
   74|     (bar: Array<boolean>); // error
                 ^^^^^^^^^^^^^^ [2]



Found 4 errors
